@@ -1,3 +1,7 @@
+2009-02-04 Frank Nägler <typo3@naegler.net>
+	
+	* add storeing of search parameters into session for search application 	
+
 2009-02-03 Frank Nägler <typo3@naegler.net>
 	
 	* add delete functionality for group videos	
